<resources>
    <string name="app_name">SafeSite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">HELLO!</string>
    <string name="nav_header_desc">SafeSite</string>
    <string name="action_faq">FAQ</string>
    <string name="menu_home">Home</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="ABOUT">About</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="todo">TODO</string>
    <string name="LOGIN">LOGIN</string>
    <string name="clarence_gail_a_larrosa">CLARENCE GAIL A. LARROSA</string>
    <string name="welcome_bacK">Welcome Back!</string>
    <string name="emaiL">Enter your username</string>
    <string name="passwoRD">Enter your password</string>
    <string name="logIN">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo2">TODO</string>
    <string name="action_about">About</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="username">Enter your username</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="registerBtn">Register</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="create_account">Create Account</string>
    <string name="developer_header">The Developer</string>
    <string name="system_administration1">Systems Administration</string>
    <string name="intelligent_systems">Intelligent Systems</string>
    <string name="clarence_gail_larrosa">CLARENCE GAIL LARROSA</string>
    <string name="about_header">SafeSite</string>
    <string name="developer_desc">A 4th year BS in Computer Engineering student at TIP-QC.</string>
    <string name="safesite_desc">SafeSite is an mobile application that helps the construction workers nad safety officers to track the compliance of personal protective equipment</string>
    <string name="question1">1. How to use this application?</string>
    <string name="question2">2. What is the purpose of this application?</string>
    <string name="question3">3. Does the construction workers allowed to use this application?</string>
    <string name="answer_1">You need to register if you don\'t have an account. When you are already registered, you can now log in and enjoy the features of the application. There are two main functions of this application.</string>
    <string name="answer_2">The purpose of this application is to monitor the compliance of the workers in wearing a ppe and display their penalties if there are.</string>
    <string name="answer_3">Yes, they are one of the target users of this application.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="faq_question_pic">FAQ QUESTION PIC</string>
    <string name="faq_person">FAQ PERSON</string>
    <string name="quiz_questions">Quiz Questions</string>
    <string name="profile">Profile</string>
    <string name="toDo">To do task</string>
    <string name="tasks">To Do</string>
    <string name="location">Location</string>
    <string name="get_location">GET LOCATION</string>
    <string name="loading">Loading…</string>
    <string name="current_location">Current Location is %1$f, %2$f</string>
    <string name="permission_not_granted">Permission is not granted</string>
    <string name="allow_permission_from_settings">Allow location permissions from settings</string>
    <string name="reminder_location">You must turn on your location. Internet is necessary.</string>
    <string name="latlong">Latitude: and Longitude:</string>
    <string name="location_button_tap">Tap to fetch coordinates</string>
    <string name="stop_location">STOP LOCATION</string>
    <string name="last_updated">Last Updated</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="note">Please remember that any changes in settings requires location updates to be restarted to take effect. Consider stopping location updates and starting again after modifying settings</string>
    <string name="time">Last Updated Time</string>
    <string name="user_address">Address: </string>
    <string name="lbl_loca">Locality: </string>
    <string name="lbl_city">City: </string>
    <string name="country">Country: </string>
    <string name="dictrict">District: </string>
    <string name="ques">  </string>
    <string name="hello">HELLO, </string>
    <string name="profile_use">Profile</string>
    <string name="logout_description">Click the button below</string>
    <string name="logout_greetings">I hope you enjoyed using this application!</string>
    <string name="logout">Logout</string>
    <string name="drawer_checklist">Checklist</string>
    <string name="home_home">Home</string>
    <string name="home_attendance">Attendance</string>
    <string name="home_todo">To do</string>
    <string name="home_location">Location</string>
    <string name="home_about">About</string>
    <string name="home_faq">FAQ</string>
    <string name="home_header">SafeSite</string>
    <string name="home_instructions">Tap Location or Attendance here!</string>
    <string name="home_description">Use this application to record your attendance and penalties.</string>
    <string name="noItemText">Tap the New Task Button below to create a new task</string>
    <string name="action_settings">Settings</string>
    <string name="title">Note</string>
    <string name="newTaskTitle">New Task</string>
    <string name="newTaskText">Task</string>
    <string name="newDescText">Description</string>
    <string name="newDateText">Date</string>
    <string name="choose">Choose</string>
    <string name="newTimeText">Time</string>
    <string name="updateTaskTitle">Update Task</string>
    <string name="createTask">Create Task</string>
    <string name="updateTask">Update Task</string>
    <string name="clock_icon">clock icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="delete_task">Delete Task</string>
    <string name="penalty_title">Penalties</string>
    <string name="penalty_header">Your Penalty</string>
    <string name="penalty_desc">Enter your violations here (no hats, no gloves, no goggles, no vest, no boots) together with the amount of the fine and the date and time it happens.</string>
    <string name="add_penalty">Add Penalty</string>
    <string name="edit_penalty">Edit Penalty</string>
    <string name="delete_penalty">Delete Penalty</string>
    <string name="display_penalty">Display All Penalties</string>
    <string name="date_of_penalty">Enter date</string>
    <string name="time_of_penalty">Enter time</string>
    <string name="penalty_desc_enter">Enter Penalty</string>
    <string name="penalty_desc_header">Create Penalty</string>
    <string name="save_penalty">SAVE</string>
    <string name="updated_date_of_penalty">Edit date</string>
    <string name="updated_time_of_penalty">Edit time</string>
    <string name="penalty_desc_enter_update">Change your penalty</string>
    <string name="penalty_desc_update_header">Edit Penalty</string>
    <string name="edit_penalty_desc">Enter the date of the day you want to edit</string>
    <string name="update_penalty">UPDATE</string>
    <string name="add_fine_amount">Enter the total penalty amount</string>
    <string name="item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="textview">TextView</string>
    <string name="violation_logo">VIOLATION</string>
    <string name="new_task">New task</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="add_task">Add a new task</string>
    <string name="update_task">Update task</string>
    <string name="normal">NORMAL</string>
    <string name="title_required">Title is required</string>
    <string name="update">Update</string>
    <string name="no_description">No description</string>
    <string name="delete">Delete</string>
    <string name="create_task">New Task</string>
    <string name="priority_description">Description</string>
    <string name="priorities">Priority</string>
    <string name="normal_dropdown">Normal</string>
    <string name="delete_btn">Delete</string>
    <string name="record_title">Attendance</string>
    <string name="name_input">Name</string>
    <string name="sitename_input">Site location</string>
    <string name="ppe_input">Enter PPE </string>
    <string name="date_input">Date</string>
    <string name="total_input">Total # of PPE</string>
    <string name="button_input">ADD RECORD</string>
    <string name="update_button">UPDATE RECORD</string>
    <string name="name_display">Name</string>
    <string name="date_display">Date</string>
    <string name="total_display">Total PPE</string>
    <string name="search_photo_username">Username</string>
    <string name="failed_load_display">Failed to load</string>
    <string name="retry_button_text">Retry</string>
    <string name="no_results_display">No results found</string>
    <string name="try_again_button_gallery_display">Please try again</string>
    <string name="no_results_display_gallery">No results found for this search</string>
    <string name="creator_display_photo_details">Photo by User on Unsplash</string>
    <string name="description_display_photo_details">This is the description</string>
    <string name="my_todo">My Todo</string>
    <string name="close_app">Logout</string>
    <string name="todo_task">TODO TASK</string>
    <string name="button">Button</string>
    <string name="add_button">ADD</string>
    <string name="add_title"> Add task title</string>
    <string name="add_description">Add task description</string>
    <string name="saveEdit_button">SAVE</string>
    <string name="edit_title"> Edit task title</string>
    <string name="edit_description">Edit task description</string>
    <string name="task_to_be_reminded">Task to be reminded ?</string>
    <string name="settings">Settings</string>
    <string name="description_note">Details...</string>
    <string name="todo_title">Task Title</string>
    <string name="key_preferences" translatable="false">preferences</string>
    <string name="key_default_currency" translatable="false">default_currency</string>
    <string name="key_date_range" translatable="false">date_range</string>
    <string name="key_is_user_onboarded" translatable="false">is_user_onboarded</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="rs">Rs</string>
    <string name="m">M</string>
    <string name="required">Required</string>
    <string name="delete_dialog">Are you sure you want to delete this record?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="product_dialog_header">Attendance details</string>
    <string name="product_dialog_description">Please enter the ppe that you are wearing.</string>
    <string name="ppe_name_hint">Enter your ppe/s</string>
    <string name="site_name">Enter your current site name</string>
    <string name="create">Create</string>
    <string name="attendance_time_hint">Time</string>
    <string name="attendance_unit_hint">am/pm</string>
</resources>