<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/darkBlue"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/attendance_name_input_text"
            android:layout_width="344dp"
            android:layout_height="43dp"
            android:layout_margin="5sp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="51dp"
            android:hint="@string/ppe_name_hint"
            android:minHeight="48dp"
            android:textColor="@color/lightYellow"
            android:textColorHint="@color/skinTone"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendance_unit_input_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>


        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:layout_marginEnd="106dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <Button
            android:id="@+id/delete_attendance_btn"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_attendance_btn" />

        <Button
            android:id="@+id/create_attendance_btn"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="52dp"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendance_name_input_text" />

        <EditText
            android:id="@+id/attendance_unit_input_text"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/attendance_unit_hint"
            android:textColor="@color/lightYellow"
            android:textColorHint="@color/skinTone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_input_text" />

        <EditText
            android:id="@+id/attendance_quantity_input_text"
            android:layout_width="144dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:hint="@string/attendance_time_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/lightYellow"
            android:textColorHint="@color/skinTone"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_input_text" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:text="@string/product_dialog_header"
            android:textColor="@color/lightYellow"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="65dp"
            android:text="@string/product_dialog_description"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/category_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/site_name"
            android:minHeight="48dp"
            android:textColor="@color/lightYellow"

            android:textColorHint="@color/skinTone"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>