<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroundblue"
    tools:context=".faq.FaqFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#003F0992"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="245dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="68dp"
                android:gravity="left"

                android:text="@string/frequently_asked_questions"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="379dp"
                android:layout_height="107dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="18dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bgColor"
                    android:text="@string/question1"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/bgAnswer"
                    android:text="@string/answer_1"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="374dp"
                android:layout_height="95dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="19dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bgColor"
                    android:text="@string/question2"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@color/bgAnswer"
                    android:text="@string/answer_2"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="376dp"
                android:layout_height="82dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="19dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bgColor"
                    android:text="@string/question3"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="@color/bgAnswer"
                    android:text="@string/answer_3"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</RelativeLayout>